<resources>
    <string name="app_name">Ambre Pizza</string>
    <string name="message_btn_create_pizza">Crea tu pizza desde 0</string>
    <string name="menu_title">Menú</string>
    <string name="btn_menu_title">menu</string>
    <string name="title_app">Ambre\n Pizza</string>
    <string name="btn_new_user_message"> <u>Crear usuario</u> </string>
    <string name="create_user_text_view1">Nombre Completo</string>
    <string name="continuar">Continuar</string>
    <string name="elegir_ingredientes">Elegir Ingredientes</string>
    <string name="seleccionar_tamanio">Seleccionar Tamaño</string>
    <string name="title_pizza_hawaiana">----Pizza Hawaiana----</string>
    <string name="title_pizza_queso">----Pizza Mozzarella----</string>
    <string name="title_pizza_criolla">----Pizza Criolla----</string>
    <string name="title_pizza_4estaciones">----Pizza 4 Estaciones----</string>
    <string name="title_pizza_new_york">----Pizza New York----</string>
    <string name="title_pizza_ricotta">----Pizza Ricotta----</string>
    <string name="title_pizza_carnivora">----Pizza Carnivora----</string>
    <string name="title_pizza_jamon">----Pizza Jamón----</string>
    <string name="title_pizza_peperoni">----Pizza Pepperoni----</string>
    <string name="title_pizza_vegetariana">----Pizza Vegetariana----</string>

    <string name="info_pizza_hawaiana">Queso mozzarella, jamón, piña y cereza</string>
    <string name="info_pizza_queso">Queso mozzarella</string>
    <string name="info_pizza_criolla">Queso mozzarella, carne, chorizo, locoto, aceituna, tomate y cebolla</string>
    <string name="info_pizza_4estaciones">Queso mozzarella, pepperoni, jamón, champiñones y aceituna</string>
    <string name="info_pizza_new_york">Queso mozzarella, pepperoni, albóndigas, chorizo, champiñones y cebolla </string>
    <string name="info_pizza_ricotta">Queso mozzarella y ricotta</string>
    <string name="info_pizza_carnivora">Queso mozzarella, salame, pepperoni, chorizo y tocino</string>
    <string name="info_pizza_jamon">Queso mozzarella y jamón</string>
    <string name="info_pizza_peperoni">Queso mozzarella y pepperoni</string>
    <string name="info_pizza_vegetariana">Queso mozzarella, brócoli, tomate, aceituna, morrón y cebolla</string>
    <string name="precio_regular">Precio Regular:</string>
    <string name="_0bs">0.00 Bs</string>
    <string name="pequenia">Pequeña</string>
    <string name="regular">Regular</string>
    <string name="grande">Grande</string>
    <string name="interminable">Interminable</string>
    <string name="_30cm">30cm</string>
    <string name="_50cm">50cm</string>
    <string name="_70cm">70cm</string>
    <string name="_100cm">100cm</string>
    <string name="x0_75">x0.75</string>
    <string name="x1_00">x1.00</string>
    <string name="x1_50">x1.50</string>
    <string name="x2_00">x2.00</string>
    <string name="precio_parcial">Precio Parcial:</string>
    <string name="elegir_cantidad">Elegir Cantidad</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="poco">Poco</string>
    <string name="normal">Normal</string>
    <string name="extra">Extra</string>
    <string name="incremento">Incremento</string>
    <string name="precio_total">Precio Total:</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="new_user_title">Crear\nUsuario</string>
    <string name="new_subtitle_mail">Correo Electrónico</string>
    <string name="new_mail">Ingrese su correo</string>
    <string name="new_title_pass">Contraseña (8–15 carácteres)</string>
    <string name="new_pass">Ingrese su nueva contraseña</string>
    <string name="btn_title_new_user">Crear cuenta</string>
    <string name="pizza">Pizza</string>
    <string name="bill_title">Datos para la factura:</string>
    <string name="bill_name">Nombre:</string>
    <string name="bill_add_name">Nombre de la factura</string>
    <string name="nit">NIT:</string>
    <string name="add_nit">Ingrese su CI o NIT</string>
    <string name="total">El precio a pagar es:</string>
    <string name="total_money">0 Bs</string>
    <string name="confirm_text">Confirmar Pedido</string>
    <string name="information_confirm">Si deseas factura en blanco deja los datos vacios.</string>
    <string name="resume_order">Resumen del pedido</string>
    <string name="resume_name">Nombre:</string>
    <string name="resume_name_info">En Blanco</string>
    <string name="resume_nit">NIT:</string>
    <string name="resume_nit_info">En Blanco</string>
    <string name="resume_money">30Bs</string>
    <string name="resume_total">Total:</string>
    <string name="resume_pizza">Pizza:</string>
    <string name="resume_info_pizza">Pizza</string>
    <string name="resume_information">Presiona sobre tu ubicación\npara indicarnos a donde enviar tu pedido</string>
    <string name="confirm_address">Confirmar dirección</string>
    <string name="thanks">¡Gracias!</string>
    <string name="thanks_message">Por comprar en la mejor pizzeria. Nos encargaremos de enviarte la pizza hasta tu dirección.</string>
    <string name="comeback_button">Volver al Menu</string>
    <string name="make_order_pizza">Pedir esta pizza</string>
    <string name="go_to">Acceder</string>

</resources>